--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ section.projetos{
 }
 .projetos .flex{
     display: flex;
-    flex-wrap: wrap;
+    
     gap: 2rem;
 }
 .carrosel-img-projetos{
@@ -661,7 +661,7 @@ footer .line-footer p a{
     /*------HABILIDADES------*/
 
     section.habilidades{
-        height: 160vh;
+        height: 240vh;
         padding: 10px 8%;
        
     }
@@ -708,7 +708,7 @@ footer .line-footer p a{
            section.quemsou{
             
             padding: 40px 4%;
-            height: 80vh;
+            height: 130vh;
             
             
     
@@ -736,6 +736,9 @@ footer .line-footer p a{
             padding: 40px 8%;
         
             
+        }
+        .img-projeto img{
+            display: none;
         }
         
             
@@ -805,10 +808,17 @@ footer .line-footer p a{
 
 footer .flex{
     display:block;
+
     padding: 10px 140px
     
     
 
+}
+footer{
+    height: 80vh;
+    padding-top: 40vh;
+    
+    
 }
 footer .logo-footer{
    padding: 10px 23px;
@@ -821,5 +831,13 @@ footer .line-footer .btn-icon{
     gap: 2rem;
 }
 }
+
+/*--------RESPONSIVIDADE-----------*/
+
+
+
+
+    
+
     
 
