--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ section .habilidades .flex{
     color: var(--primary-color) ;
     font-family: var(--fonte-de-escrever);
     font-size: 2.5rem;
-    margin-bottom: 30px;
+   
     padding: 10px 20px 20px;
 }
 
@@ -319,15 +319,14 @@ section .habilidades .flex{
     align-items: center;
     flex-direction: column;
     gap: 20px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 80px;
     color: var(--primary-color);
     background: #FFFFFF38 ;
 }
 .especialidades p{
     font-size: 1.2rem;
     font-weight: 500;
-    text-align: center;
+    padding: 20px;
     font-family: var(--fonte-de-leitura);
     flex-wrap: wrap;
 }
@@ -377,7 +376,7 @@ section.habilidades .flex .habilidades-box-text h4{
     font-weight: 500;
     color: var(--primary-color);
     font-weight: 600;
-    margin-bottom: 50px;
+    
     font-family: var(--fonte-de-escrever);
     
 
