--- a/style.css
+++ b/style.css
@@ -769,7 +769,7 @@ footer .line-footer p a{
            section.quemsou{
             
             padding: 40px 4%;
-            height: 100vh;
+            height: 110vh;
             
             
     
@@ -793,7 +793,7 @@ footer .line-footer p a{
         /*------------PROJETOS-------------*/
 
         section.projetos{
-            height:90vh;
+            height:100vh;
             padding: 40px 8%;
         
             
@@ -939,6 +939,13 @@ footer .line-footer .btn-icon{
     section.habilidades{
         height: 170vh;
     }
+    section.contato{
+        padding: 40px 4%;
+        height: 100vh;
+        
+    }
+
+    
 }
 
 
